--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,30 +1,44 @@
+
+
+@import '../../apps/Mail/css/mail-css.css';
+
+
 body {
-    background-color: lightblue;
+    background-color:  rgb(249 249 249 / 30%);
+    
+}
+header{
+    display: flex;
+    padding: 15px 20px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #e4dfdf;
+    justify-content: space-between;
+    
 }
 
-.user-preview {
-    background-color: darkcyan;
-    padding: 5px;
-    width: 200px;
-    text-align: center;
+.logo{
+    width: 65px;
+    height: 65px;
 }
 
-.user-preview button {
-    margin: 5px;
+
+.navbar {
+    padding: 0;
+    margin: 0;
 }
 
-.dark {
-    background-color: rgb(66, 64, 64);
-    color: rgb(216, 217, 218);
+
+.navbar li{
+    display: flex;
+    align-items: center;
+    margin:0px 30px;
+    list-style: none;
+    text-decoration: none;
 }
 
-.light {
-    background-color: rgb(209, 208, 208);
-    color: rgb(80, 81, 82);
-}
-
-.red {
-    color: red;
+a{
+    color: rgb(56, 54, 54);
+    text-decoration: none;
 }
 
 
@@ -41,3 +55,4 @@ body {
 .flex.center {
     align-items: center;
 }
+
