add keep app basics, with multy line cards display and editting, using reuseable component supporting img, text, and task-list lines.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,4 @@
-body {
-    background-color: lightblue;
-}
-
+@import '../../apps/Keep/assets/css/note-style.css';
 .user-preview {
     background-color: darkcyan;
     padding: 5px;
