--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,10 @@
 @import '../../apps/Keep/assets/css/note-style.css';
 @import '../../apps/Mail/assets/css/mail-css.css';
+* {
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .user-preview {
     background-color: darkcyan;
     padding: 5px;
