--- a/apps/Mail/assets/css/mail-css.css
+++ b/apps/Mail/assets/css/mail-css.css
@@ -47,7 +47,7 @@
 }
 
 .mails-container {
-    margin-left: 15vw;
+    margin-left: 200px;
     border-left: 1px solid rgb(184, 184, 184);
 }
 
@@ -115,7 +115,7 @@
 }
 
 .aside {
-    width: 14vw;
+    width: 190px;
     position: fixed;
 }
 
@@ -131,7 +131,7 @@
 }
 .add-link.compose{
     border: 1px solid rgb(189, 187, 187);
-    border-radius:50px;
+    border-radius:4em;
     margin: 0;
     margin-bottom: 8px;
 }
@@ -146,6 +146,8 @@
 }
 
 
+/* check with shachar for border radius */
+
 .add-link:hover{
     border-radius: 3px;
     background-color: rgb(226, 224, 224);
@@ -156,7 +158,7 @@
     padding: 4px;
     margin-bottom: 10px;
     display: flex;
-    margin-left: 2vw;
+    margin-left:20px;
     font-size: 10px;
     transition: all 0.2s;
 
@@ -270,4 +272,37 @@ aside a {
     height: 1.5em;
 }
 
-/* @media() */
+@media(max-width:500px){
+    header.flex{
+        display: block;
+    }
+    header{
+    }
+    .main-contant{
+        display: block;
+
+    }
+    .aside{
+        position: static;
+        display: block;
+        width: auto;
+    }
+    .mails-container{
+        max-width: 400px;
+        width: 0;
+        margin: 0;
+    }
+
+
+
+    .mail-preview{
+        width: 100vw;
+        /* width:0;
+        font-size: auto;
+        margin: 0;
+        padding: 0;
+        overflow: none;
+        height: 0;
+         */
+    }
+}
