--- a/apps/Keep/assets/css/note-style.css
+++ b/apps/Keep/assets/css/note-style.css
@@ -9,6 +9,14 @@
     padding-left: 20px;
 }
 
+button.start-demo {
+    font-size: 2em;
+    padding: 10px 20px;
+    border-radius: 2em;
+    background-color: rgb(76, 204, 255);
+    color: rgb(243, 237, 248);
+}
+
 .note {
     flex-direction: column;
     justify-content: space-between;
@@ -51,11 +59,20 @@
     margin-top: 10px;
 }
 
+.note-video iframe {
+    margin-left: 10px;
+    width: 300px;
+    border-radius: 20px;
+    margin-top: 10px;
+}
+
 .note textarea {
     margin-top: 30px;
     background-color: rgb(246, 246, 246);
     border: 0;
-    max-width: 300px;
+    width: 250px;
+    resize: none;
+    font-size: 1.4em;
 }
 
 .note-todos {
@@ -95,7 +112,7 @@ li.pin {
     cursor: pointer;
     margin-top: 10px;
     font-size: 1.7em;
-    margin-right: 180px;
+    margin-right: 145px;
 }
 
 .note-img button.delete {
@@ -118,7 +135,7 @@ li.pin {
     color: #f84436;
     border: 0;
     position: relative;
-    top: -28px;
+    top: -48px;
     left: 0px;
 }
 
@@ -201,6 +218,211 @@ input.search-bar {
     padding: 0.35em 0.7em;
     border-radius: 2em;
     width: 365px;
+}
+
+
+/* <-------DEMO------> */
+
+.main-demo {
+    overflow: visible;
+    position: absolute;
+    top: 500px;
+    left: calc(50vw - 180px);
+    width: 50vw;
+}
+
+.main-demo button.next {
+    position: relative;
+    left: 400px;
+    top: -160px;
+    font-size: 2em;
+    padding: 10px 20px;
+    border-radius: 2em;
+    background-color: rgb(76, 204, 255);
+    color: rgb(225, 231, 238);
+}
+
+.main-demo>img {
+    height: 100px;
+}
+
+.main-demo>h1 {
+    font-size: 2em;
+}
+
+.main-demo h1.stage-0 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-0 {
+    position: relative;
+    top: -950px;
+    left: -300px;
+}
+
+.main-demo h1.stage-1 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-1 {
+    position: relative;
+    top: -970px;
+    left: -70px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-2 {
+    position: relative;
+    top: -870px;
+}
+
+.main-demo img.stage-2 {
+    position: relative;
+    top: -400px;
+    left: -100px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-3 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-3 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -357px;
+    left: 45px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-4 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-4 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -357px;
+    left: 100px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-5 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-5 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -357px;
+    left: 156px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-6 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-6 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -357px;
+    left: 213px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-7 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-7 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -357px;
+    left: 271px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-8 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-8 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -872px;
+    left: 37px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-9 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-9 {
+    width: 70px;
+    height: 70px;
+    position: relative;
+    top: -871px;
+    left: 212px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-10 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-10 {
+    width: 120px;
+    height: 90px;
+    position: relative;
+    top: -880px;
+    left: 253px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-11 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-11 {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    top: -833px;
+    left: 39px;
+    transform: rotate(125deg);
+}
+
+.main-demo h1.stage-12 {
+    position: relative;
+    top: -900px;
+}
+
+.main-demo img.stage-12 {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    top: -531px;
+    left: 84px;
+    transform: rotate(125deg);
 }
 
 
