--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import '../../apps/Keep/assets/css/note-style.css';
 @import '../../apps/Mail/assets/css/mail-css.css';
 @import './home.css';
+
 * {
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -233,6 +234,12 @@ header {
     margin-bottom: 10px;
     border-bottom: 1px solid #e4dfdf;
     justify-content: space-between;
+    background-color: #fff;
+}
+.apps-icon{
+  width: 50px;
+  height: 50px;
+  display: none;
 }
 
 .logo {
@@ -262,6 +269,26 @@ header {
     text-decoration: none;
 }
 
+
+@media(max-width:700px){
+  .apps-icon {
+    margin-top: 20px;
+    display: block;
+  }
+  .navbar.flex {
+    display: none;
+ }
+  header.flex {
+    height: 100px;
+
+}
+header {
+    width: 90vw;
+    margin: 0;
+    padding: 0;
+}
+
+} 
 
 /* FLEX */
 
