--- a/assets/css/main-header.css
+++ b/assets/css/main-header.css
@@ -11,10 +11,7 @@ header.main-header {
     height: 65px;
 }
 
-.main-header .navbar {
-    padding: 0;
-    margin: 0;
-}
+
 
 .main-header .navbar li {
     display: flex;
@@ -34,6 +31,26 @@ header.main-header {
 }
 
 @media(max-width:700px) {
+    .main-header .navbar {
+        background-color: rgba(0, 0, 0, 0.842);
+        width: 94vw;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 400px;
+        display: flex;
+        flex-direction: column;
+        padding: 0;
+        margin: 0;
+        position: fixed;
+        z-index: 3;
+        top: -100%;
+        /* left: 50px; */
+        border-radius: 10px;
+        transition: 0.7s;
+    }
+    .main-header .navbar.active {
+        top: 110px;
+    }
     .main-header .apps-icon {
         width: 50px;
         height: 50px;
