--- a/apps/Keep/assets/css/demo.css
+++ b/apps/Keep/assets/css/demo.css
@@ -14,6 +14,11 @@
     left: calc(50vw - 180px);
 }
 
+.footer-pusher {
+    min-height: 650px;
+    height: 90vh;
+}
+
 .main-demo .note {
     font-size: 16px;
 }
