--- a/apps/Mail/assets/css/mail-css.css
+++ b/apps/Mail/assets/css/mail-css.css
@@ -55,17 +55,19 @@ button {
     font-size: 1.5em;
     line-height: 30px;
     width: 80%;
+    height: 100%;
     margin-left: 10%;
     margin-top: 15px;
-    background-color: rgb(235, 229, 229);
+    background-color: rgb(235 229 229 / 72%);
     padding: 20px;
     border-radius: 5px;
 }
 
 .mail-details button {
+    padding: 5px 15px;
     border: 1px solid rgb(212, 210, 210);
     background-color: white;
-    border-radius: 3px;
+    border-radius: 10px;
     height: 50px;
     cursor: pointer;
 }
